# iislib

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  document.sh  environment.yml  evaluate_model.py  main.ipynb  prospector_profile.yaml  pyproject.toml  requirements.txt  setup.cfg  test.py  tmp_pres.md  train.py  try_model.py
clicking/: encode.py  robots.py  utils.py
data/: clicking.py  iis_dataset.py  region_selector.py  transformations.py  transforms.py
data/datasets/: coco_lvis.py  grabcut.py  sbd.py
engine/: metrics.py  train.py  training_logic.py
iislib/clicking/: encode.py  robots.py  utils.py
iislib/data/: iis_dataset.py  region_selector.py  transforms.py
iislib/data/datasets/: berkeley.py  coco_lvis.py  grabcut.py  sbd.py
iislib/engine/: metrics.py  scores_analyze.py  test.py  train.py  training_logic.py
iislib/models/: abstract_model.py  iis_smp_wrapper.py  lightning.py
iislib/models/custom/gto99/: .gitignore  customized.py  dataloader.py  demo.py  interaction.py  readme.md
iislib/models/custom/ritm/: customized.py  demo.py  train.py
iislib/models/wrappers/: iis_smp_wrapper.py
models/: iis_smp_wrapper.py  lightning.py
models/custom/gto99/: customized.py  dataloader.py
models/custom/gto99/networks/: models.py
models/custom/ritm/: customized.py  train.py
models/wrappers/: iis_smp_wrapper.py
src/clicking/: encode.py  robots.py
src/data/datasets/: berkeley.py  sbd.py
src/engine/: scores_analyze.py
src/models/: iis_smp_wrapper.py
tests/: test_clicking.py  test_data.py  test_engine.py  visualization.py
(+136 files in other folders)
