[metadata]
name = iislib
version = 0.0.1
author = franchesoni
author_email = marchesoniacland@gmail.com
description = Interactive Image Segmentation research framework
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/franchesoni/iisframework
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = iislib
packages = find:
python_requires = >=3.6

[options.packages.find]
where = iislib
